RESOLVED FIXED310092
[OpenXR] Crash when closing a session with hit testing
https://bugs.webkit.org/show_bug.cgi?id=310092
Summary [OpenXR] Crash when closing a session with hit testing
Sergio Villar Senin
Reported 2026-03-17 05:15:16 PDT
We're getting crashes when finalizing AR sessions with hit testing enabled. The problem is that the session is sometimes freed before the HitTestManager, which in turn stores the session id
Attachments
Sergio Villar Senin
Comment 1 2026-03-17 05:20:20 PDT
EWS
Comment 2 2026-03-17 06:36:32 PDT
Committed 309403@main (a35addd14f70): <https://commits.webkit.org/309403@main> Reviewed commits have been landed. Closing PR #60763 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-17 06:37:11 PDT
Note You need to log in before you can comment on or make changes to this bug.